--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -847,8 +847,8 @@
         "                    self.shape = (len(value), len(value[0]))\n",
         "                except:\n",
         "                    self.shape = (len(value), 1)\n",
-        "            if value == {}:\n",
-        "                matrix = []\n",
+        "            if self.value == {}:\n",
+        "                self.matrix = []\n",
         "                for i in range(dim[0]):\n",
         "                        row = []\n",
         "                        for j in range(dim[1]):\n",
