--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -799,7 +799,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1"
@@ -824,7 +824,9 @@
         "    \"\"\"\n",
         "    Read the matrix and store as part of the class object\n",
         "    \"\"\"\n",
-        "    def __init__(self, value = {}, dim=(1,1)):\n",
+        "    def __init__(self, value = None, dim=(1,1)):\n",
+        "      if value is None:\n",
+        "        value = []\n",
         "        if isinstance(value, list):\n",
         "            if len(value)>0:\n",
         "                if type(value[0]) is int or type(value[0]) is float:\n",
@@ -834,7 +836,7 @@
         "                for i in value:\n",
         "                    if type(i) is not int and type(i) is not float and type(i) is not list:\n",
         "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
-        "                if row is list:\n",
+        "                if isinstance(value[0], list):\n",
         "                    lenInner = len(value[0])\n",
         "                    for i in value:\n",
         "                        if len(i) is not lenInner:\n",
@@ -848,14 +850,14 @@
         "                except:\n",
         "                    self.shape = (len(value), 1)\n",
         "            if self.value == {}:\n",
-        "                self.matrix = []\n",
+        "                self.Matrix = []\n",
         "                for i in range(dim[0]):\n",
         "                        row = []\n",
         "                        for j in range(dim[1]):\n",
         "                            row.append(1)\n",
-        "                        matrix.append(row)\n",
+        "                        Matrix.append(row)\n",
         "\n",
-        "                self.value = matrix\n",
+        "                self.value = Matrix\n",
         "                self.shape = dim\n",
         "\n",
         "    \"\"\"\n",
