--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -799,7 +799,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1"
@@ -824,9 +824,7 @@
         "    \"\"\"\n",
         "    Read the matrix and store as part of the class object\n",
         "    \"\"\"\n",
-        "    def __init__(self, value = None, dim=(1,1)):\n",
-        "      if value is None:\n",
-        "        value = []\n",
+        "    def __init__(self, value = {}, dim=(1,1)):\n",
         "        if isinstance(value, list):\n",
         "            if len(value)>0:\n",
         "                if type(value[0]) is int or type(value[0]) is float:\n",
@@ -836,7 +834,7 @@
         "                for i in value:\n",
         "                    if type(i) is not int and type(i) is not float and type(i) is not list:\n",
         "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
-        "                if isinstance(value[0], list):\n",
+        "                if row is list:\n",
         "                    lenInner = len(value[0])\n",
         "                    for i in value:\n",
         "                        if len(i) is not lenInner:\n",
@@ -850,7 +848,7 @@
         "                except:\n",
         "                    self.shape = (len(value), 1)\n",
         "            if self.value == {}:\n",
-        "                self.Matrix = []\n",
+        "                Matrix = []\n",
         "                for i in range(dim[0]):\n",
         "                        row = []\n",
         "                        for j in range(dim[1]):\n",
