--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -799,7 +799,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 14,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1"
@@ -847,7 +847,7 @@
         "                    self.shape = (len(value), len(value[0]))\n",
         "                except:\n",
         "                    self.shape = (len(value), 1)\n",
-        "            if not value:\n",
+        "            if len(value)==0:\n",
         "                matrix = []\n",
         "                for i in range(dim[0]):\n",
         "                        row = []\n",
@@ -855,36 +855,19 @@
         "                            row.append(1)\n",
         "                        matrix.append(row)\n",
         "\n",
-        "                self.value = matrix\n",
-        "                self.shape = dim\n",
+        "                value = matrix\n",
+        "                shape = dim\n",
         "\n",
         "    \"\"\"\n",
         "    Print the matrix to screen\n",
         "    \"\"\"\n",
         "    def __repr__(self):\n",
-        "        string = \"  \"\n",
+        "        string = \"\"\n",
         "        for i in range(self.shape[0]):\n",
-        "            if self.shape[1]>1:\n",
-        "                if i < self.shape[0]-1:\n",
-        "                    string += \"[ \"\n",
-        "                    for j in range(self.shape[1]):\n",
-        "                        string += str(self.value[i][j]) + \" \"\n",
-        "                    string += \"]\\n  \"\n",
-        "                else:\n",
-        "                    string += \"[ \"\n",
-        "                    for j in range(self.shape[1]):\n",
-        "                        string += str(self.value[i][j]) + \" \"\n",
-        "            else:\n",
-        "                if self.shape[0]==1:\n",
-        "                    string += \"[ \"\n",
-        "                if i < self.shape[0]-1:\n",
-        "                    if self.shape[1]>1:\n",
-        "                        string += \"[ \"\n",
-        "                    string += str(self.value[i]) + \"\\n  \"\n",
-        "                else:\n",
-        "                    string += str(self.value[i]) + \" \"\n",
-        "        if self.shape[1]>1:\n",
-        "            string += \"]\\n\\n\"\n",
+        "            string += \"[ \"\n",
+        "            for j in range(self.shape[1]):\n",
+        "                string += str(self.value[i][j]) + \" \"\n",
+        "            string += \"]\\n\"\n",
         "        return string.strip()"
       ]
     }
