--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -799,7 +799,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 16,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1"
@@ -866,7 +866,7 @@
         "            for j in range(self.shape[1]):\n",
         "                string += str(self.value[i][j]) + \" \"\n",
         "            string += \"]\\n\"\n",
-        "        return string\n"
+        "        return string"
       ]
     }
   ],
