--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -799,7 +799,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 3,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1"
@@ -822,50 +822,70 @@
         "\n",
         "class Matrix(object):\n",
         "    \"\"\"\n",
-        "    Read the matrix and store as part of the class object.\n",
+        "    Read the matrix and store as part of the class object\n",
         "    \"\"\"\n",
-        "    def __init__(self, value=None, dim=(1, 1)):\n",
-        "        if value is None:\n",
-        "            value = []\n",
-        "\n",
+        "    def __init__(self, value = {}, dim=(1,1)):\n",
         "        if isinstance(value, list):\n",
-        "            if len(value) > 0:\n",
-        "                if isinstance(value[0], (int, float)):\n",
+        "            if len(value)>0:\n",
+        "                if type(value[0]) is int or type(value[0]) is float:\n",
         "                    row = (int, float)\n",
         "                else:\n",
         "                    row = type(value[0])\n",
-        "\n",
         "                for i in value:\n",
-        "                    if not isinstance(i, (int, float, list)):\n",
+        "                    if type(i) is not int or type(i) is not float or type(i) is not list:\n",
         "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
-        "\n",
         "                if row is list:\n",
-        "                    len_inner = len(value[0])\n",
+        "                    lenInner = len(value[0])\n",
         "                    for i in value:\n",
-        "                        if len(i) != len_inner:\n",
+        "                        if len(i) is not lenInner:\n",
         "                            raise RuntimeError(\"Matrix is invalid. Please ensure that all rows have uniform length.\")\n",
         "                        for j in i:\n",
-        "                            if not isinstance(j, (int, float)):\n",
+        "                            if type(j) is not int and type(j) is not float:\n",
         "                                raise RuntimeError(\"Matrix is invalid. Please ensure that all elements are numeric (either float or int).\")\n",
-        "\n",
         "                self.value = value\n",
         "                try:\n",
         "                    self.shape = (len(value), len(value[0]))\n",
-        "                except IndexError:\n",
+        "                except:\n",
         "                    self.shape = (len(value), 1)\n",
-        "            else:\n",
-        "                self.value = [[1 for _ in range(dim[1])] for _ in range(dim[0])]\n",
-        "                self.shape = dim\n",
-        "        else:\n",
-        "            raise ValueError(\"Value must be a list.\")\n",
+        "            if len(value)==0:\n",
         "\n",
+        "                matrix = []\n",
+        "                for i in range(dim[0]):\n",
+        "                        row = []\n",
+        "                        for j in range(dim[1]):\n",
+        "                            row.append(1)\n",
+        "                        matrix.append(row)\n",
+        "\n",
+        "                value = matrix\n",
+        "                shape = dim\n",
+        "\n",
+        "    \"\"\"\n",
+        "    Print the matrix to screen\n",
+        "    \"\"\"\n",
         "    def __repr__(self):\n",
-        "        string = \"\"\n",
+        "        string = \"  \"\n",
         "        for i in range(self.shape[0]):\n",
-        "            string += \"[ \"\n",
-        "            for j in range(self.shape[1]):\n",
-        "                string += str(self.value[i][j]) + \" \"\n",
-        "            string += \"]\\n\"\n",
+        "            if self.shape[1]>1:\n",
+        "                if i < self.shape[0]-1:\n",
+        "                    string += \"[ \"\n",
+        "                    for j in range(self.shape[1]):\n",
+        "                        string += str(self.value[i][j]) + \" \"\n",
+        "                    string += \"]\\n  \"\n",
+        "                else:\n",
+        "                    string += \"[ \"\n",
+        "                    for j in range(self.shape[1]):\n",
+        "                        string += str(self.value[i][j]) + \" \"\n",
+        "            else:\n",
+        "                if self.shape[0]==1:\n",
+        "                    string += \"[ \"\n",
+        "                if i < self.shape[0]-1:\n",
+        "                    if self.shape[1]>1:\n",
+        "                        string += \"[ \"\n",
+        "                    string += str(self.value[i]) + \"\\n  \"\n",
+        "                else:\n",
+        "                    string += str(self.value[i]) + \" \"\n",
+        "        if self.shape[1]>1:\n",
+        "            string += \"]\\n\\n\"\n",
         "        return string"
       ]
     }
