--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -856,8 +856,22 @@
         "                            row.append(1)\n",
         "                        matrix.append(row)\n",
         "\n",
-        "                value = matrix\n",
-        "                shape = dim\n",
+        "                self.value = matrix\n",
+        "                try:\n",
+        "                    self.shape = (dim[0], dim[1])\n",
+        "                except:\n",
+        "                    self.shape = (dim[0], 1)\n",
+        "\n",
+        "        elif isinstance(value, dict):\n",
+        "            self.value = value\n",
+        "            try:\n",
+        "                self.shape = (len(value), 1)\n",
+        "            except:\n",
+        "                self.shape = (1,1)\n",
+        "        else:\n",
+        "            raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
+        "\n",
+        "\n",
         "\n",
         "    \"\"\"\n",
         "    Print the matrix to screen\n",
