--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -799,7 +799,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1"
@@ -832,7 +832,7 @@
         "                else:\n",
         "                    row = type(value[0])\n",
         "                for i in value:\n",
-        "                    if type(i) is not int or type(i) is not float or type(i) is not list:\n",
+        "                    if type(i) is not int and type(i) is not float and type(i) is not list:\n",
         "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
         "                if row is list:\n",
         "                    lenInner = len(value[0])\n",
@@ -847,8 +847,7 @@
         "                    self.shape = (len(value), len(value[0]))\n",
         "                except:\n",
         "                    self.shape = (len(value), 1)\n",
-        "            if len(value)==0:\n",
-        "\n",
+        "            if value == {}:\n",
         "                matrix = []\n",
         "                for i in range(dim[0]):\n",
         "                        row = []\n",
@@ -856,22 +855,8 @@
         "                            row.append(1)\n",
         "                        matrix.append(row)\n",
         "\n",
-        "                self.value = matrix\n",
-        "                try:\n",
-        "                    self.shape = (dim[0], dim[1])\n",
-        "                except:\n",
-        "                    self.shape = (dim[0], 1)\n",
-        "\n",
-        "        elif isinstance(value, dict):\n",
-        "            self.value = value\n",
-        "            try:\n",
-        "                self.shape = (len(value), 1)\n",
-        "            except:\n",
-        "                self.shape = (1,1)\n",
-        "        else:\n",
-        "            raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
-        "\n",
-        "\n",
+        "                value = matrix\n",
+        "                shape = dim\n",
         "\n",
         "    \"\"\"\n",
         "    Print the matrix to screen\n",
@@ -900,7 +885,7 @@
         "                    string += str(self.value[i]) + \" \"\n",
         "        if self.shape[1]>1:\n",
         "            string += \"]\\n\\n\"\n",
-        "        return string"
+        "        return string\n"
       ]
     }
   ],
