--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -799,12 +799,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 17,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
-        "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
+        "outputId": "6b1c193a-1e2c-48fb-9ebe-fe0c658ea19e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "#si-matrix\n",
         "\n",
@@ -825,6 +837,8 @@
         "    Read the matrix and store as part of the class object\n",
         "    \"\"\"\n",
         "    def __init__(self, value = {}, dim=(1,1)):\n",
+        "        self.value = value\n",
+        "        self.shape = dim\n",
         "        if isinstance(value, list):\n",
         "            if len(value)>0:\n",
         "                if type(value[0]) is int or type(value[0]) is float:\n",
@@ -855,37 +869,22 @@
         "                            row.append(1)\n",
         "                        matrix.append(row)\n",
         "\n",
-        "                value = matrix\n",
-        "                shape = dim\n",
+        "                self.value = matrix\n",
+        "                self.shape = dim\n",
         "\n",
         "    \"\"\"\n",
         "    Print the matrix to screen\n",
         "    \"\"\"\n",
         "    def __repr__(self):\n",
-        "        string = \"  \"\n",
-        "        for i in range(self.shape[0]):\n",
-        "            if self.shape[1]>1:\n",
-        "                if i < self.shape[0]-1:\n",
-        "                    string += \"[ \"\n",
-        "                    for j in range(self.shape[1]):\n",
-        "                        string += str(self.value[i][j]) + \" \"\n",
-        "                    string += \"]\\n  \"\n",
-        "                else:\n",
-        "                    string += \"[ \"\n",
-        "                    for j in range(self.shape[1]):\n",
-        "                        string += str(self.value[i][j]) + \" \"\n",
-        "            else:\n",
-        "                if self.shape[0]==1:\n",
-        "                    string += \"[ \"\n",
-        "                if i < self.shape[0]-1:\n",
-        "                    if self.shape[1]>1:\n",
-        "                        string += \"[ \"\n",
-        "                    string += str(self.value[i]) + \"\\n  \"\n",
-        "                else:\n",
-        "                    string += str(self.value[i]) + \" \"\n",
-        "        if self.shape[1]>1:\n",
-        "            string += \"]\\n\\n\"\n",
-        "        return string\n"
+        "        string = \"\"\n",
+        "        for row in self.value:\n",
+        "            string += \"[ \" + \" \".join(str(elem) for elem in row) + \" ]\\n\"\n",
+        "        return string\n",
+        "\n",
+        "matrix_10x10 = Matrix(dim=(3, 8))\n",
+        "\n",
+        "# Print the matrix\n",
+        "print(matrix_10x10)"
       ]
     }
   ],
