--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -799,14 +799,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 19,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
-        "outputId": "6b1c193a-1e2c-48fb-9ebe-fe0c658ea19e"
+        "outputId": "182f06fb-2468-4f95-c0d3-89394e070105"
       },
       "outputs": [
         {
@@ -879,7 +879,7 @@
         "        string = \"\"\n",
         "        for row in self.value:\n",
         "            string += \"[ \" + \" \".join(str(elem) for elem in row) + \" ]\\n\"\n",
-        "        return string\n",
+        "        return string.strip()\n",
         "\n",
         "matrix_10x10 = Matrix(dim=(3, 8))\n",
         "\n",
