--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -799,14 +799,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 23,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
-        "outputId": "182f06fb-2468-4f95-c0d3-89394e070105"
+        "outputId": "bd1731d6-6f34-4bdb-9a94-9d923a0611c9"
       },
       "outputs": [
         {
@@ -878,13 +878,12 @@
         "    def __repr__(self):\n",
         "        string = \"\"\n",
         "        for row in self.value:\n",
-        "            string += \"[ \" + \" \".join(str(elem) for elem in row) + \" ]\\n\"\n",
+        "            string += \"[\" + \" \".join(str(elem) for elem in row) + \"]\\n\"\n",
         "        return string.strip()\n",
         "\n",
-        "matrix_10x10 = Matrix(dim=(3, 8))\n",
         "\n",
-        "# Print the matrix\n",
-        "print(matrix_10x10)"
+        "matrix_10x10 = Matrix(dim=(10, 10))\n",
+        "print(matrix_10x10)\n"
       ]
     }
   ],
