--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -799,14 +799,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 25,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
-        "outputId": "bd1731d6-6f34-4bdb-9a94-9d923a0611c9"
+        "outputId": "86568e79-b214-4bff-e0c5-8aa08420832f"
       },
       "outputs": [
         {
@@ -876,10 +876,11 @@
         "    Print the matrix to screen\n",
         "    \"\"\"\n",
         "    def __repr__(self):\n",
-        "        string = \"\"\n",
-        "        for row in self.value:\n",
-        "            string += \"[\" + \" \".join(str(elem) for elem in row) + \"]\\n\"\n",
-        "        return string.strip()\n",
+        "      string = \"\"\n",
+        "      for row in self.value:\n",
+        "        string += \"[{}]\\n\".format(\" \".join(str(elem) for elem in row))\n",
+        "\n",
+        "      return string.strip()\n",
         "\n",
         "\n",
         "matrix_10x10 = Matrix(dim=(10, 10))\n",
