--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -799,14 +799,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 27,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
-        "outputId": "86568e79-b214-4bff-e0c5-8aa08420832f"
+        "outputId": "f4db32fc-272b-4bc9-ca41-5c8784084b08"
       },
       "outputs": [
         {
@@ -869,8 +869,8 @@
         "                            row.append(1)\n",
         "                        matrix.append(row)\n",
         "\n",
-        "                self.value = matrix\n",
-        "                self.shape = dim\n",
+        "                self.value = value\n",
+        "                self.shape = (len(value), len(value[0]))\n",
         "\n",
         "    \"\"\"\n",
         "    Print the matrix to screen\n",
