--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -799,21 +799,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 28,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
-        "outputId": "f4db32fc-272b-4bc9-ca41-5c8784084b08"
+        "outputId": "f95cbfdb-82c2-4023-e1ea-c11c31acd45f"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\n"
+            "[ 1 1 1 1 1 1 1 1 1 1 ]\n",
+            "[ 1 1 1 1 1 1 1 1 1 1 ]\n",
+            "[ 1 1 1 1 1 1 1 1 1 1 ]\n",
+            "[ 1 1 1 1 1 1 1 1 1 1 ]\n",
+            "[ 1 1 1 1 1 1 1 1 1 1 ]\n",
+            "[ 1 1 1 1 1 1 1 1 1 1 ]\n",
+            "[ 1 1 1 1 1 1 1 1 1 1 ]\n",
+            "[ 1 1 1 1 1 1 1 1 1 1 ]\n",
+            "[ 1 1 1 1 1 1 1 1 1 1 ]\n",
+            "[ 1 1 1 1 1 1 1 1 1 1 ]\n"
           ]
         }
       ],
@@ -836,55 +845,41 @@
         "    \"\"\"\n",
         "    Read the matrix and store as part of the class object\n",
         "    \"\"\"\n",
-        "    def __init__(self, value = {}, dim=(1,1)):\n",
-        "        self.value = value\n",
-        "        self.shape = dim\n",
-        "        if isinstance(value, list):\n",
-        "            if len(value)>0:\n",
-        "                if type(value[0]) is int or type(value[0]) is float:\n",
-        "                    row = (int, float)\n",
+        "    def __init__(self, value=None, dim=(1, 1)):\n",
+        "        if value is None:\n",
+        "            self.value = [[1 for _ in range(dim[1])] for _ in range(dim[0])]\n",
+        "        elif isinstance(value, list):\n",
+        "            if len(value) > 0:\n",
+        "                if isinstance(value[0], (int, float)):\n",
+        "                    row_type = (int, float)\n",
         "                else:\n",
-        "                    row = type(value[0])\n",
+        "                    row_type = type(value[0])\n",
+        "\n",
         "                for i in value:\n",
-        "                    if type(i) is not int and type(i) is not float and type(i) is not list:\n",
-        "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
-        "                if row is list:\n",
-        "                    lenInner = len(value[0])\n",
-        "                    for i in value:\n",
-        "                        if len(i) is not lenInner:\n",
-        "                            raise RuntimeError(\"Matrix is invalid. Please ensure that all rows have uniform length.\")\n",
-        "                        for j in i:\n",
-        "                            if type(j) is not int and type(j) is not float:\n",
-        "                                raise RuntimeError(\"Matrix is invalid. Please ensure that all elements are numeric (either float or int).\")\n",
-        "                self.value = value\n",
-        "                try:\n",
-        "                    self.shape = (len(value), len(value[0]))\n",
-        "                except:\n",
-        "                    self.shape = (len(value), 1)\n",
-        "            if value == {}:\n",
-        "                matrix = []\n",
-        "                for i in range(dim[0]):\n",
-        "                        row = []\n",
-        "                        for j in range(dim[1]):\n",
-        "                            row.append(1)\n",
-        "                        matrix.append(row)\n",
+        "                    if not isinstance(i, list):\n",
+        "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all rows are lists.\")\n",
+        "                    if len(i) != len(value[0]):\n",
+        "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all rows have uniform length.\")\n",
+        "                    for j in i:\n",
+        "                        if not isinstance(j, (int, float)):\n",
+        "                            raise RuntimeError(\"Matrix is invalid. Please ensure that all elements are numeric (either float or int).\")\n",
         "\n",
         "                self.value = value\n",
         "                self.shape = (len(value), len(value[0]))\n",
+        "            else:\n",
+        "                raise ValueError(\"Matrix cannot be empty.\")\n",
+        "        else:\n",
+        "            raise ValueError(\"Invalid input: value must be a list or None.\")\n",
         "\n",
-        "    \"\"\"\n",
-        "    Print the matrix to screen\n",
-        "    \"\"\"\n",
         "    def __repr__(self):\n",
-        "      string = \"\"\n",
-        "      for row in self.value:\n",
-        "        string += \"[{}]\\n\".format(\" \".join(str(elem) for elem in row))\n",
+        "        string = \"\"\n",
+        "        for row in self.value:\n",
+        "            string += \"[ {} ]\\n\".format(\" \".join(str(elem) for elem in row))\n",
+        "        return string.strip()  # Ensure no extra newline at the end\n",
         "\n",
-        "      return string.strip()\n",
-        "\n",
-        "\n",
+        "# Example usage\n",
         "matrix_10x10 = Matrix(dim=(10, 10))\n",
-        "print(matrix_10x10)\n"
+        "print(matrix_10x10)  # This should print a 10x10 matrix of ones\n"
       ]
     }
   ],
