--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -799,33 +799,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 39,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
-        "outputId": "a1132b93-9b3b-47b1-bb2d-8d2ab0f26f20"
+        "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[1 1 1 1 1 1 1 1 1 1]\n",
-            "[1 1 1 1 1 1 1 1 1 1]\n",
-            "[1 1 1 1 1 1 1 1 1 1]\n",
-            "[1 1 1 1 1 1 1 1 1 1]\n",
-            "[1 1 1 1 1 1 1 1 1 1]\n",
-            "[1 1 1 1 1 1 1 1 1 1]\n",
-            "[1 1 1 1 1 1 1 1 1 1]\n",
-            "[1 1 1 1 1 1 1 1 1 1]\n",
-            "[1 1 1 1 1 1 1 1 1 1]\n",
-            "[1 1 1 1 1 1 1 1 1 1]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#si-matrix\n",
         "\n",
@@ -893,13 +872,8 @@
         "    def __repr__(self):\n",
         "      string = \"\"\n",
         "      for row in self.value:\n",
-        "        string += \"[{}]\\n\".format(\" \".join(str(elem) for elem in row))\n",
-        "\n",
-        "      return string.strip()\n",
-        "\n",
-        "\n",
-        "matrix_10x10 = Matrix(dim=(10, 10))\n",
-        "print(matrix_10x10)\n",
+        "        string += \"  [ {} ]\\n\".format(\" \".join(str(elem) for elem in row))  # Add spaces and newline\n",
+        "      return string + \"\\n\"\n",
         "\n"
       ]
     }
